# triton-kernels

./: README.md  Triton_Kernels_Colab.ipynb  Triton_Kernels_Colab_v2.ipynb  __init__.py  pyproject.toml  pytest.ini  test_all_kernels_colab.py
01_vector_add/: README.md  __init__.py  vector_add.py
02_matmul/: README.md  __init__.py  matmul.py  matmul_t4.py
03_softmax/: README.md  __init__.py  softmax.py
04_layernorm/: README.md  __init__.py  layernorm.py
05_flash_attention/: README.md  __init__.py  benchmark.py  flash_attention.py  flash_attention_v2.py
benchmarks/: run_all.py
tests/: __init__.py  conftest.py  test_flash_attention.py  test_vector_add.py
